kubernetes/apps/media/shelfmark/app/networkpolicy.yaml
---
# yaml-language-server: $schema=https://www.schemastore.org/any.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: shelfmark-byparr-egress
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: shelfmark
      gluetun.k8s-gitops.io/client-gateway: gluetun-echo
  egress:
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/instance: byparr
            k8s:io.kubernetes.pod.namespace: byparr
      toPorts:
        - ports:
            - port: "8191"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/instance: prowlarr
            k8s:io.kubernetes.pod.namespace: prowlarr
      toPorts:
        - ports:
            - port: "9696"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/instance: qbittorrent-3
            k8s:io.kubernetes.pod.namespace: torrent
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/instance: sabnzbd-1
            k8s:io.kubernetes.pod.namespace: nzb
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
